2008-07-06  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/Makefile.am
	* app/widgets/gimpcombotagentry.[ch]
	* app/widgets/gimpdatafactoryview.c
	* app/widgets/widgets-types.h: added GimpComboTagEntry widget which
	wraps GimpTagEntry and will provide UI similar to combo box.

2008-07-04  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: support tag autocompletion.

	* app/core/gimpfilteredcontainer.[ch]: maintain tag reference count
	of all items contained in source container.

2008-07-01  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_set_selected_items),
	(gimp_tag_entry_load_selection): display tags assigned to selected
	item.

2008-06-30  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.[ch]: cleaned up and removed unnenecessarry
	responsibilities.

2008-06-30  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpdatafactoryview.[ch]
	* app/widgets/gimptagentry.[ch]: tag assignment GUI support.

2008-06-30  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptagcache.[ch]: properly save changed tags.

2008-06-29  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpfilteredcontainer.c
	* app/widgets/gimptagentry.c: multiple tag querying support.

2008-06-28  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimptagentry.[ch]: added GimpTagEntry widget.

	* app/widgets/gimpdatafactoryview.c: use GimpTagEntry instead of GtkEntry.

2008-06-28  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimpfilteredcontainer.c: detect source container changes.

2008-06-27  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpfilteredcontainer.[ch]: added GimpFilteredContainer
	which can be used to filter containers based on object tags.

	* app/widgets/gimpbrushfactoryview.c
	* app/widgets/gimpdatafactoryview.[ch]: simple tag query from GUI.
